2019-1/220/users/3714/executions/1736_2498.log
== TEST (2019-05-16 16:45:35) 
-- CODE:
cidadeA = float(input("cidade A: "))
cidadeB = float(input("cidade B: "))
percentualA = float(input("percentual A:"))
percentualB = Float(input("percentual B: "))
anos = 0

while(cidadeA < cidadeB and percentaulA > percentualB):
	anos = anos + 1
	cidadeA = cidadeA + (cidadeA * (percentualA/100))
	cidadeB = cidadeB + (cidadeB * (percentualB/100))
	
print(round(anos, 8))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    percentualB = Float(input())
NameError: name 'Float' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:46:13) 
-- CODE:
cidadeA = float(input("cidade A: "))
cidadeB = float(input("cidade B: "))
percentualA = float(input("percentual A:"))
percentualB = float(input("percentual B: "))
anos = 0

while(cidadeA < cidadeB and percentaulA > percentualB):
	anos = anos + 1
	cidadeA = cidadeA + (cidadeA * (percentualA/100))
	cidadeB = cidadeB + (cidadeB * (percentualB/100))
	
print(round(anos, 8))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(cidadeA < cidadeB and percentaulA > percentualB):
NameError: name 'percentaulA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:46:53) 
-- CODE:
cidadeA = float(input("cidade A: "))
cidadeB = float(input("cidade B: "))
percentualA = float(input("percentual A:"))
percentualB = float(input("percentual B: "))
anos = 0

while(cidadeA < cidadeB and percentualA > percentualB):
	anos = anos + 1
	cidadeA = cidadeA + (cidadeA * (percentualA/100))
	cidadeB = cidadeB + (cidadeB * (percentualB/100))
	
print(round(anos, 8))


-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:47:15) 
-- CODE:
cidadeA = float(input("cidade A: "))
cidadeB = float(input("cidade B: "))
percentualA = float(input("percentual A:"))
percentualB = float(input("percentual B: "))
anos = 0

while(cidadeA < cidadeB and percentualA > percentualB):
	anos = anos + 1
	cidadeA = cidadeA + (cidadeA * (percentualA/100))
	cidadeB = cidadeB + (cidadeB * (percentualB/100))
	
print(round(anos, 8))


-- EXECUTION TIME:
0.12798
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
